fix error in name of file saved on cluster for lma dist 40

--- a/remake.yml
+++ b/remake.yml
@@ -292,6 +292,14 @@ targets:
     command: plot_trait_vpd_narea_lma2(list_assembly_FvCB_single_narea_lma_cluster, I(vec_site_prod = c(0, 0.5, 1, 1.5, 2, 2.5, 3) ))
     plot: tall
 
+  figures/gradient_narea_lma_single_narea_lma_NvLTR_FvCB.pdf:
+    command: plot_trait_vpd_narea_lma(list_assembly_FvCB_single_narea_lma_NvLTR_cluster, I(vec_site_prod = c(0, 0.5, 1, 1.5, 2, 2.5, 3) ))
+    plot: square
+
+  figures/gradient_narea_lma_single_narea_lma2_NvLTR_FvCB.pdf:
+    command: plot_trait_vpd_narea_lma2(list_assembly_FvCB_single_narea_lma_NvLTR_cluster, I(vec_site_prod = c(0, 0.5, 1, 1.5, 2, 2.5, 3) ))
+    plot: tall
+
   figures/gradient_narea_lma_single_FvCB_cor.pdf:
     command: plot_cor_narea_lma(list_assembly_FvCB_single_narea_lma_cluster)
     plot: square
